--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@ Hoofd stylesheet voor de website
 */
 
 /* Resetten van de standaardwaarden van de browser */
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video {
     margin: 0;
     padding: 0;
     border: 0;
@@ -13,19 +13,27 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 }
 
 /* HTML5 display-role resetten voor oudere browsers */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
     display: block;
 }
 
 :root {
-    --primary-color: #aaa; /* Primaire achtergrondkleur */
-    --primary-foreground-color: #000; /* Primaire voorgrondkleur */
-    --secondary-color: #fff; /* Secundaire achtergrondkleur (Sections, nieuwsberichten etc) */
-    --secondary-foreground-color: #333; /* Secundaire voorgrondkleur (Sections, nieuwsberichten etc) */
-    --tertiary-color: #333; /* Tertiaire achtergrondkleur (Tekst, links etc) */
-    --tertiary-foreground-color: #fff; /* Tertiaire voorgrondkleur (Tekst, links etc) */
-    --accent-color: #f00; /* Accentkleur (Links, knoppen etc) */
-    --accent-foreground-color: #fff; /* Voorgrondkleur van accentkleur (Links, knoppen etc) */
+    /* Primaire achtergrondkleur */
+    --primary-color: #aaa;
+    /* Primaire voorgrondkleur */
+    --primary-foreground-color: #000;
+    /* Secundaire achtergrondkleur (Sections, nieuwsberichten etc) */
+    --secondary-color: #fff;
+    /* Secundaire voorgrondkleur (Sections, nieuwsberichten etc) */
+    --secondary-foreground-color: #333;
+    /* Tertiaire achtergrondkleur (Tekst, links etc) */
+    --tertiary-color: #333;
+    /* Tertiaire voorgrondkleur (Tekst, links etc) */
+    --tertiary-foreground-color: #fff;
+    /* Accentkleur (Links, knoppen etc) */
+    --accent-color: #f008;
+    /* Voorgrondkleur van accentkleur (Links, knoppen etc) */
+    --accent-foreground-color: #fff;
 }
 
 body {
@@ -53,6 +61,23 @@ nav h1 {
     font-weight: 600;
 }
 
+.menu-button {
+    display: none;
+    font-size: 1.3rem;
+    cursor: pointer;
+    background-color: var(--secondary-color);
+    color: var(--secondary-foreground-color);
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    transition: background-color 0.3s ease-in-out, color 0.2s ease-in-out;
+}
+
+.menu-button:hover {
+    color: var(--accent-foreground-color);
+    background-color: var(--accent-color);
+}
+
 .links {
     display: flex;
     gap: 1rem;
@@ -72,3 +97,28 @@ nav h1 {
     background-color: var(--accent-color);
 }
 
+@media screen and (max-width: 1280px) {
+    /* Laptop */
+    /* Verstop navigatielinks offscreen, wanneer data-visible = true, toon hem vanaf de linkerkant, onder de H1 in de navbar */
+    .links {
+        position: fixed;
+        transform: translateX(-100%);
+        flex-direction: column;
+        top: 5.5rem;
+        left: 0;
+        min-width: 200px;
+        height: calc(100svh - 5.5rem);
+        gap: 0;
+        background-color: var(--secondary-color);
+        transition: transform 0.3s ease-in-out;
+    }
+
+    .links[data-visible="true"] {
+        transform: translateX(0);
+    }
+
+    .menu-button {
+        display: block;
+    }
+
+}
