--- a/public/style.css
+++ b/public/style.css
@@ -296,7 +296,7 @@ h1 {
 }
 
 .nieuws h1 {
-    margin: 2rem 0 0;
+    margin: 2rem 0 1rem;
 }
 
 .nieuws .container {
@@ -304,10 +304,8 @@ h1 {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 2rem;
     padding: 2rem;
     max-width: 1200px;
-
 }
 
 .post-buttons {
@@ -336,7 +334,18 @@ h1 {
     color: var(--secondary-foreground-color);
     border-radius: 5px;
     box-shadow: #1d1d1b 0px 0px 10px;
+}
 
+.post h2 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 600;
+}
+
+.post .date {
+    font-size: .75rem;
+    line-height: 1rem;
+    margin-bottom: 1rem;
 }
 
 .button {
@@ -371,6 +380,54 @@ h1 {
 
 .red-button:hover {
     background-color: #c62828;
+}
+
+.blue-button {
+    background-color: #2196f3;
+    color: #fff;
+}
+
+.blue-button:hover {
+    background-color: #1565c0;
+}
+
+.post-form {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 2rem;
+    background-color: var(--secondary-color);
+    color: var(--secondary-foreground-color);
+    border-radius: 5px;
+    box-shadow: #1d1d1b 0px 0px 10px;
+    min-width: 300px;
+}
+
+.post-form .form-group {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 100%;
+}
+
+.post-form .form-group label {
+    font-size: 1.5rem;
+    margin-bottom: .5rem;
+}
+
+.post-form .form-group .form-control {
+    padding: .5rem;
+    border-radius: 5px;
+    border: 1px solid var(--secondary-foreground-color);
+    font-size: 1rem;
+    width: calc(100% - 1rem);
+}
+
+textarea {
+    font-family: 'Arial', sans-serif;
 }
 
 /* Media Queries */
@@ -432,6 +489,10 @@ h1 {
     .aankondigingen {
         flex-direction: column;
     }
+
+    .posts {
+        grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    }
 }
 
 @media screen and (max-width: 480px) {
@@ -451,5 +512,9 @@ h1 {
 
     .countdown-item {
         min-width: 50px;
+    }
+
+    .posts {
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     }
 }
