--- a/public/style.css
+++ b/public/style.css
@@ -48,6 +48,7 @@ body {
 nav {
     display: flex;
     position: sticky;
+    position: -webkit-sticky;
     top: 0;
     justify-content: space-between;
     align-items: center;
@@ -301,7 +302,7 @@ h1 {
 
 .nieuws .container {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     flex-direction: column;
     padding: 2rem;
@@ -318,14 +319,57 @@ h1 {
 }
 
 .posts {
+    position: relative;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
-    gap: 1rem;
+    gap: 1rem 4rem;
     padding: 1rem;
+    min-height: 60svh;
+}
+
+.tree {
+    position: absolute;
+    top: 28%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 1px;
+    height: 72%;
+    background-color: var(--tertiary-foreground-color);
+}
+
+.tree-bottom-text {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 1rem;
+    color: var(--tertiary-foreground-color);
+
+}
+
+.post:nth-child(odd)::before {
+    position: absolute;
+    top: 50%;
+    left: -2rem;
+    width: 2rem;
+    height: 1px;
+    background-color: var(--tertiary-foreground-color);
+    content: '';
+}
+
+.post:nth-child(even)::after {
+    position: absolute;
+    top: 50%;
+    right: -2rem;
+    width: 2rem;
+    height: 1px;
+    background-color: var(--tertiary-foreground-color);
+    content: '';
 }
 
 .post {
     display: flex;
+    position: relative;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
@@ -446,7 +490,6 @@ textarea {
         height: calc(100svh - 5.8rem);
         gap: 0;
         background-color: var(--secondary-color);
-        transition: transform 0.3s ease-in-out;
         overflow-y: auto;
         z-index: 4;
     }
@@ -454,6 +497,11 @@ textarea {
     .links[data-visible="true"] {
         transform: translateX(0);
         box-shadow: #1d1d1b 0px 0px 10px;
+        transition: transform 0.3s ease-in-out;
+    }
+
+    .links[data-visible="false"] {
+        transition: transform 0.3s ease-in-out;
     }
 
     .menu-button {
@@ -464,6 +512,20 @@ textarea {
         padding: 1rem;
     }
 
+}
+
+@media screen and (max-width: 1160px){
+    .tree {
+        display: none;
+    }
+
+    .post:nth-child(odd)::before {
+        display: none;
+    }
+
+    .post:nth-child(even)::after {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 1024px) {
