--- a/public/style.css
+++ b/public/style.css
@@ -43,6 +43,11 @@ body {
     min-height: 100svh;
 }
 
+.container {
+    max-width: 1200px;
+    padding: 0 1rem;
+}
+
 /* Navigatie */
 
 nav {
@@ -407,6 +412,8 @@ h1 {
     margin-bottom: 1rem;
 }
 
+/* Buttons */
+
 .button {
     display: inline-block;
     padding: .5rem 1rem;
@@ -464,7 +471,7 @@ h1 {
     min-width: 300px;
 }
 
-.post-form .form-group {
+.form-group {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
@@ -472,12 +479,12 @@ h1 {
     width: 100%;
 }
 
-.post-form .form-group label {
+.form-group label {
     font-size: 1.5rem;
     margin-bottom: .5rem;
 }
 
-.post-form .form-group .form-control {
+.form-group .form-control {
     padding: .5rem;
     border-radius: 5px;
     border: 1px solid var(--secondary-foreground-color);
@@ -485,8 +492,54 @@ h1 {
     width: calc(100% - 1rem);
 }
 
+label b {
+    color: red;
+
+}
+
 textarea {
     font-family: 'Arial', sans-serif;
+    resize: vertical;
+    min-height: 4lh;
+}
+
+/* Contact pagina */
+
+.contact {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    background-color: var(--tertiary-color);
+    color: var(--tertiary-foreground-color);
+    min-height: calc(100svh - 5.8rem);
+}
+
+.contact .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 2rem;
+    max-width: 1200px;
+}
+
+.contact h1 {
+    margin: 2rem 0 1rem;
+}
+
+.contact-form {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 2rem;
+    background-color: var(--secondary-color);
+    color: var(--secondary-foreground-color);
+    border-radius: 5px;
+    box-shadow: #1d1d1b 0px 0px 10px;
+    min-width: 500px;
 }
 
 /* Media Queries */
@@ -574,6 +627,10 @@ textarea {
     .posts {
         grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     }
+
+    .contact-form {
+        min-width: 400px;
+    }
 }
 
 @media screen and (max-width: 480px) {
@@ -597,5 +654,9 @@ textarea {
 
     .posts {
         grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    }
+
+    .contact-form {
+        min-width: 300px;
     }
 }
