--- a/public/style.css
+++ b/public/style.css
@@ -542,6 +542,23 @@ textarea {
     min-width: 500px;
 }
 
+.alert {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    padding: 1rem;
+    background-color: #f44336;
+    color: #fff;
+    border-radius: 5px;
+    margin: 1rem 0;
+}
+
+.alert-success {
+    background-color: #4caf50;
+    color: #fff;
+}
+
 /* Media Queries */
 
 @media screen and (max-width: 1280px) {
