--- a/public/style.css
+++ b/public/style.css
@@ -38,8 +38,8 @@ body {
     font-family: 'Arial', sans-serif;
     font-size: 16px;
     line-height: 1.6;
-    color: var(--primary-foreground-color);
-    background-color: var(--primary-color);
+    color: var(--tertiary-foreground-color);
+    background-color: var(--tertiary-color);
     min-height: 100svh;
 }
 
@@ -255,6 +255,8 @@ h1 {
     font-size: 1rem;
     line-height: 1.5rem;
     margin-bottom: 1rem;
+    max-height: 10lh;
+    overflow-y: auto;
 }
 
 .meerzien {
