Added clickable images
Clickable images

--- a/public/style.css
+++ b/public/style.css
@@ -207,6 +207,38 @@ h1 {
     font-weight: 400;
 }
 
+/* Fotogallerij */
+
+.container .popup-image{
+    position: fixed;
+    top:0; left:0;
+    background: rgba(0, 0, 0, 0.9);
+    height: 100%;
+    width: 100%;
+    z-index: 100;
+    display: none;
+}
+
+.container .popup-image span{
+    position: absolute;
+    top:6.8rem; right: 2rem;
+    font-size: 40px;
+    font-weight: bolder;
+    color:#fff;
+    cursor: pointer;
+    z-index: 100;
+}
+
+.container .popup-image img{
+    position: absolute;
+    top:50%; left:50%;
+    transform: translate(-50%, -50%);
+    border: 4px solid #fff;
+    border-radius: 5px;
+    width:750px;
+    object-fit: cover;
+}
+
 /* Homepagina nieuws */
 
 .aankondigingen {
@@ -573,6 +605,10 @@ textarea {
 
     .posts {
         grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    }
+
+    .container .popup-image img{
+        width: 95%;
     }
 }
 
