--- a/public/style.css
+++ b/public/style.css
@@ -621,6 +621,63 @@ textarea {
     color: #fff;
 }
 
+/* Bestuursleden pagina */
+
+.bestuursleden {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    background-color: var(--tertiary-color);
+    color: var(--tertiary-foreground-color);
+    min-height: calc(100svh - 5.8rem);
+}
+
+.bestuursleden h1 {
+    margin: 2rem 0 1rem;
+}
+
+.bestuursleden .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 2rem;
+    max-width: 1200px;
+}
+
+.boardmembers {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 2rem;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin-top: 1rem;
+}
+
+.member-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 2rem;
+    background-color: var(--secondary-color);
+    color: var(--secondary-foreground-color);
+    border-radius: 5px;
+    box-shadow: #1d1d1b 0px 0px 10px;
+    min-width: 300px;
+
+}
+
+.member-card p {
+    max-width: 40ch;
+    max-height: 8lh;
+    overflow-y: auto;
+}
+
 /* Media Queries */
 
 @media screen and (min-width: 1920px) {
