--- a/public/style.css
+++ b/public/style.css
@@ -209,6 +209,15 @@ h1 {
 
 /* Fotogallerij */
 
+.photo-form {
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 500px;
+    width: 100%;
+    text-align: left; /* Align everything to the left */
+}
+
 .gallery {
     display: flex;
     justify-content: center;
