--- a/public/style.css
+++ b/public/style.css
@@ -880,6 +880,26 @@ textarea {
     color: #fff;
 }
 
+/* Performace pagina */
+
+.performances {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    background-color: var(--primary-color);
+    color: var(--primary-foreground-color);
+}
+
+.performances .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 2rem;
+    max-width: 1200px;
+}
+
 /* Media Queries */
 
 @media screen and (min-width: 1920px) {
