--- a/public/style.css
+++ b/public/style.css
@@ -900,6 +900,48 @@ textarea {
     max-width: 1200px;
 }
 
+.performance-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 2rem;
+    background-color: var(--secondary-color);
+    color: var(--secondary-foreground-color);
+    border-radius: 5px;
+    box-shadow: #1d1d1b 0px 0px 10px;
+    min-width: 300px;
+}
+
+.performance-item h2 {
+    font-size: 2rem;
+    line-height: 2.5rem;
+    margin-bottom: .5rem;
+}
+
+.performance-item p {
+    font-size: 1rem;
+    line-height: 1.1rem;
+}
+
+.performance-item img {
+    width: 100%;
+    max-width: 500px;
+    border-radius: 5px;
+}
+
+.performance-items-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 2rem;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin-top: 1rem;
+}
+
 /* Media Queries */
 
 @media screen and (min-width: 1920px) {
