--- a/public/style.css
+++ b/public/style.css
@@ -942,6 +942,19 @@ textarea {
     margin-top: 1rem;
 }
 
+.error {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: .5rem 1rem;
+    background-color: #e03333;
+    color: #fff;
+    border-radius: 5px;
+    margin: 1rem 0;
+    border: 3px solid #ad0707;
+
+}
+
 /* Media Queries */
 
 @media screen and (min-width: 1920px) {
