--- a/public/style.css
+++ b/public/style.css
@@ -249,7 +249,7 @@ h1 {
 
 .gallery {
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     flex-direction: column;
     background-color: var(--primary-color);
@@ -687,14 +687,14 @@ textarea {
 .contact-split {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: stretch;
     flex-direction: row;
     gap: 1rem;
 }
 
 .contact-info {
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: flex-start;
     flex-direction: column;
     gap: 1rem;
@@ -810,8 +810,8 @@ textarea {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    align-items: flex-start;
-    flex-direction: row;
+    align-items: center;
+    flex-direction: column;
     padding: 2rem;
     width: 100%;
     max-width: 1200px;
@@ -819,7 +819,7 @@ textarea {
 
 .section {
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     flex-direction: column;
     gap: 1rem;
@@ -860,7 +860,7 @@ textarea {
     background-color: var(--secondary-color);
     color: var(--secondary-foreground-color);
     border-radius: 5px;
-    border: 1px solid var(--primary-foreground-color);
+    border: 1px solid var(--primary-color);
     width: calc(100% - 4rem);
 }
 
@@ -891,6 +891,10 @@ textarea {
     flex-direction: column;
     background-color: var(--primary-color);
     color: var(--primary-foreground-color);
+}
+
+.performances h1 {
+    margin: 2rem 0 1rem;
 }
 
 .performances .container {
@@ -1028,6 +1032,7 @@ textarea {
     flex-wrap: wrap;
     max-width: 1200px;
     margin-top: 1rem;
+    width: 100%;
 }
 
 .calendar .container {
@@ -1038,6 +1043,7 @@ textarea {
     gap: 1rem;
     max-width: 1200px;
     margin: 0 auto;
+    padding-top: 2rem;
 }
 
 .calendar h1 {
@@ -1209,6 +1215,10 @@ div.fc-event-main {
     .performance-image {
         height: 200px;
         width: 300px;
+    }
+
+    .section {
+        width: 80%;
     }
 }
 
