Verwijder 'Agenda' + verander achtergrondkleur naar darkred (gebruikerstest)

--- a/public/style.css
+++ b/public/style.css
@@ -19,7 +19,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
 
 :root {
     /* Primaire achtergrondkleur */
-    --primary-color: #ffffff;
+    --primary-color: #8b0000;
     /* Primaire voorgrondkleur */
     --primary-foreground-color: #000;
     /* Secundaire achtergrondkleur (Sections, nieuwsberichten etc) */
@@ -273,6 +273,7 @@ h1 {
 
 .gallery h1 {
     margin: 2rem 0 1rem;
+    color: white;
 }
 
 .gallery .container {
@@ -453,6 +454,7 @@ h1 {
 
 .nieuws h1 {
     margin: 2rem 0 1rem;
+    color: white;
 }
 
 .nieuws .container {
@@ -683,6 +685,7 @@ textarea {
 
 .contact h1 {
     margin: 2rem 0 1rem;
+    color: white;
 }
 
 .contact-form {
@@ -765,6 +768,7 @@ textarea {
 
 .bestuursleden h1 {
     margin: 2rem 0 1rem;
+    color: white;
 }
 
 .bestuursleden .container {
@@ -822,6 +826,7 @@ textarea {
 
 .historie h1 {
     margin: 2rem 0 1rem;
+    color: white;
 }
 
 .historie .container {
@@ -914,6 +919,7 @@ textarea {
 
 .performances h1 {
     margin: 2rem 0 1rem;
+    color: white;
 }
 
 .performances .container {
@@ -1098,7 +1104,7 @@ div.fc-event-main {
     align-items: center;
     flex-direction: column;
     background-color: var(--primary-color);
-    color: var(--primary-foreground-color);
+    color: white;
 }
 
 .sponsors .container {
@@ -1112,6 +1118,7 @@ div.fc-event-main {
 
 .sponsors h1 {
     margin: 2rem 0 1rem;
+    color: white;
 }
 
 .sponsor.admin {
