--- a/public/style.css
+++ b/public/style.css
@@ -200,6 +200,71 @@ h1 {
     border-radius: 5px;
 }
 
+/* Gordijn */
+
+@keyframes slideL {
+    0% {
+        transform: scaleX(1) rotateZ(0deg) translateX(0);
+    }
+
+    100% {
+        transform: scaleX(0) rotateZ(20deg) translateX(-100%);
+    }
+}
+
+@keyframes slideR {
+    0% {
+        transform: scaleX(1) rotateZ(0deg) translateX(0);
+    }
+
+    100% {
+        transform: scaleX(0) rotateZ(-20deg) translateX(100%);
+    }
+}
+
+.curtain {
+    position: absolute;
+    display: flex;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 50;
+    pointer-events: none;
+    overflow: hidden;
+}
+
+.curtain-left {
+    animation: slideL 3s ease-in-out forwards;
+    position: absolute;
+    left: 0;
+    top: -200px;
+    background-color: var(--accent-color);
+    height: calc(100% + 200px);
+    width: 50%;
+    transform-origin: left top;
+    padding-top: 50%;
+    background-image: url("/images/curtain.jpg");
+    background-size: 100% 100%;
+    background-position: center;
+}
+
+.curtain-right {
+    animation: slideR 3s ease-in-out forwards;
+    position: absolute;
+    right: 0;
+    top: -200px;
+    background-color: var(--accent-color);
+    height: calc(100% + 200px);
+    width: 50%;
+    transform-origin: right top;
+    padding-top: 50%;
+    background-image: url("/images/curtain.jpg");
+    background-size: 100% 100%;
+    background-position: center;
+}
+
 /* Countdown tot volgende voorstelling */
 
 .aankomend {
